# atm-portfolio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: lint.yml
capstone/: README.md
notes/: README.md
projects/01-schiphol-live-traffic/: README.md
projects/02-fir-flight-count/: README.md
projects/03-separation-pairs/: README.md
projects/04-openap-fuelburn/: README.md
projects/05-atfm-delays/: README.md
projects/06-cdo-compliance/: README.md
projects/_TEMPLATE/: README.md
shared/atm_utils/: __init__.py  opensky.py  plotting.py
