[project]
name = "atm-portfolio"
version = "0.1.0"
description = "Hands-on portfolio exploring European Air Traffic Management with open flight data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Utku Dinc", email = "utkudinc123@gmail.com" },
]
keywords = ["atm", "air-traffic-management", "eurocontrol", "opensky", "aviation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # Core ATM tooling
    "traffic>=2.11",
    "pyModeS>=2.18",
    "openap>=1.5",
    # Data stack
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # Plotting
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "cartopy>=0.23",
    # Notebook
    "jupyterlab>=4.1",
    "ipywidgets>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pytest>=8.1",
    "nbstripout>=0.7",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/utlev/atm-portfolio"
Issues = "https://github.com/utlev/atm-portfolio/issues"

# -----------------------------------------------------------------------------
# Build system
# -----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared/atm_utils"]

# -----------------------------------------------------------------------------
# Ruff — linter + formatter (fast, modern, minimal config)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb_checkpoints", "data/", "notes/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["E402", "F401"]  # notebooks are allowed late imports / unused

# -----------------------------------------------------------------------------
# Black — fallback formatter if you prefer it over `ruff format`
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# -----------------------------------------------------------------------------
# mypy — light defaults; tighten per-project as you go
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
